完成后台餐桌管理功能CURD
进一步完善前后台的交互逻辑和组织架构
前台基本模块模板划分
前台名词命名与后台调整为一致

--- a/src/main/webapp/UserPublic/Dev/CSS/main.less
+++ b/src/main/webapp/UserPublic/Dev/CSS/main.less
@@ -11,7 +11,7 @@
 
 
 @import "./func-tpl.less";
-@import "./vars-model-board.less";
+@import "./vars-model-table.less";
 
 
 // 常量及属性定义|重置
@@ -204,11 +204,11 @@ div.footer.container {
 @import "./plugin.exValidate.less";
 
 @import "./page-login.less";
-@import "./page-board.less";
-@import "./section-board-status.less";
+@import "./page-table.less";
+@import "./section-table-status.less";
 @import "./page-reservation.less";
 @import "./section-reservation-editor.less";
-@import "./page-board-list.less";
-@import "./page-board-editor.less";
+@import "./page-table-list.less";
+@import "./page-table-editor.less";
 @import "./page-dish-list.less";
 @import "./page-dish-editor.less";
