--- a/src/main/webapp/UserPublic/Dev/CSS/page-table-editor.less
+++ b/src/main/webapp/UserPublic/Dev/CSS/page-table-editor.less
@@ -1,8 +1,8 @@
 @charset 'utf-8';
 
-#page-board-editor {
+#page-table-editor {
 
-	.model.model-board-editor {
+	.model.model-table-editor {
 
 		.panel { 
 			& {
