修改restaurants表和餐厅信息查看、编辑
修改restaurants表
除rest_upid外设为非空
rest_name调整为255长度，并设置唯一键
rest_type设置索引
rest_upid修正外键更新约束为CASCADE

dao层增加对rest_upid默认值检测，当rest_upid值为0表示数据库中的值为null

修改“餐厅管理”名词为“餐厅信息”

实现餐厅信息查看、编辑功能

--- a/src/main/webapp/UserPublic/Dev/CSS/main.less
+++ b/src/main/webapp/UserPublic/Dev/CSS/main.less
@@ -208,6 +208,8 @@ div.footer.container {
 @import "./section-table-status.less";
 @import "./page-reservation.less";
 @import "./section-reservation-editor.less";
+@import "./page-restaurant-info.less";
+@import "./page-restaurant-editor.less";
 @import "./page-table-list.less";
 @import "./page-table-editor.less";
 @import "./page-dish-list.less";
